<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/zadanie_1"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/to_jest_przycisk_2"
        android:onClick="napisz"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_jest_przycisk_1"
        android:onClick="napiszCos"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powrot_przycisk"
        android:onClick="powrot"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/brak_kliknietego_przycisku"
        android:id="@+id/napis"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/zadanie_2"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/dodawanie"
        android:onClick="dodaj"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/odejmowanie"
        android:onClick="odejmij"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zerowanie"
        android:onClick="zero"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="0"
        android:id="@+id/napis2"
        />


</LinearLayout>